--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 <li style="font-size: 18px;"><b>Complete the Steps correctly &amp; congratulations...</b></li>
 </ul>
 </div>
-<div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable" id="tmp_image-63832" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false" data-imagelink="www.google.com">
-<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg" alt="" width="500" data-imagelink="www.google.com" data-src="https://i.ibb.co/PrVG3Sk/g4g.png">
+<div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable" id="tmp_image-63832" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" aria-disabled="false" data-imagelink="https://worldrbox.github.io/noda/bdyna.html">
+<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg" alt="" width="500" data-imagelink="https://worldrbox.github.io/noda/bdyna.html" data-src="https://i.ibb.co/PrVG3Sk/g4g.png">
 </div>
 </div>
 </div>
